--- a/style.css
+++ b/style.css
@@ -3,3 +3,16 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align: center;
+}
+
+#featured-property figure{
+  text-align: center;
+}
+
+
+#featured-property p{
+ color: red;
+text-align: center;
+ }
