--- a/style.css
+++ b/style.css
@@ -28,4 +28,11 @@ text-align: center;
    display: flex;
    justify-content: space-evenly;
    background: red;
+
  }
+#details div {
+  width: 25%;
+  align-items: center;
+  justify-content: center;
+  margin-left: 40px;
+}
